--- a/core/templates/web/assistedliving.html
+++ b/core/templates/web/assistedliving.html
@@ -326,127 +326,127 @@
         </div>
     </div>
 {#    <div style="background: #fff;position: relative;"><label id="loanid" style="font-size:83px;">&nbsp;</label></div>#}
-    <div class="container" style="padding-top:3em;position: relative;" id="loanid" >
-        <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
-                <h4>创业贷款申请指导</h4>
-                <p>恒心提供创业贷款代申请服务，利用自身众多创业项目与对政策的精准把控程度，快速完成相关扶持资金的审批流程与下发，让创业者将时间和精力专心投入事业。</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-12 text-center" style=" margin-bottom: 2em;">
-                <h1>创业贷款类型</h1>
-                <p>恒心提供以下贷款政策解读答疑，并提供普通创业贷款代申请服务</p>
-            </div>
-
-            <div class="row" style=" margin-top: 4em;">
-                <div class="col-xs-3 animate-box fadeInUp animated ">
-                    <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-1.png" alt="四川恒心前途教育咨询-科技创业贷款咨询" class="img-responsive">
-                        <div class="hexoco-text">
-                            <h2>科技创业贷款</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3 animate-box fadeInUp animated">
-                    <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-2.png" alt="四川恒心前途教育咨询-自主创业贷款咨询" class="img-responsive">
-                        <div class="hexoco-text">
-                            <h2>自主创业贷款</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3 animate-box fadeInUp animated">
-                    <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-3.png" alt="四川恒心前途教育咨询-个人创业贷款咨询" class="img-responsive">
-                        <div class="hexoco-text">
-                            <h2>个人创业贷款</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3 animate-box fadeInUp animated">
-                    <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-4.png" alt="四川恒心前途教育咨询-青少年创业贷款" class="img-responsive">
-                        <div class="hexoco-text">
-                            <h2>青少年创业贷款</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3 animate-box fadeInUp animated">
-                    <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-5.png" alt="四川恒心前途教育咨询-高校毕业生自主创业贷款" class="img-responsive">
-                        <div class="hexoco-text">
-                            <h2>高校毕业生自主创业贷款</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3 animate-box fadeInUp animated">
-                    <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-6.png" alt="四川恒心前途教育咨询-创业基金贷款" class="img-responsive">
-                        <div class="hexoco-text">
-                            <h2>创业基金贷款</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3 animate-box fadeInUp animated">
-                    <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-7.png" alt="四川恒心前途教育咨询-普通创业贷款" class="img-responsive">
-                        <div class="hexoco-text">
-                            <h2>普通创业贷款</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-
-        <div class="row" style="margin-top: 3em;margin-bottom: 3em;">
-            <div class="col-xs-6 text-center">
-                <div class="col-xs-12">
-                    <h1>申请贷款所需条件</h1>
-                </div>
-                <div class="col-xs-12 text-left">
-                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-cloud"></i>
-                            </span>
-                        <div class="feature-copy">
-                            <h4 class="zifont">申请人需具有完全民事行为能力</h4>
-                        </div>
-                    </div>
-
-                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-file-text2"></i>
-                            </span>
-                        <div class="feature-copy">
-                            <h4 class="zifont">无不良信用及债务纪录</h4>
-                        </div>
-                    </div>
-
-                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-credit-card"></i>
-                            </span>
-                        <div class="feature-copy">
-                            <h4 class="zifont">无社保状态或持有失业证</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-6 text-center">
-                <div class="col-xs-12">
-                    <h1>办理流程</h1>
-                </div>
-                <div class="col-xs-12 text-center">
-                    <div class="col-xs-12 text-center" style="margin-top: 1em;">
-                        <img src="/static/images/web/liveflow3.png" style="width: 80%;height: auto">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+{#    <div class="container" style="padding-top:3em;position: relative;" id="loanid" >#}
+{#        <div class="row">#}
+{#            <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">#}
+{#                <h4>创业贷款申请指导</h4>#}
+{#                <p>恒心提供创业贷款代申请服务，利用自身众多创业项目与对政策的精准把控程度，快速完成相关扶持资金的审批流程与下发，让创业者将时间和精力专心投入事业。</p>#}
+{#            </div>#}
+{#        </div>#}
+{##}
+{#        <div class="row">#}
+{#            <div class="col-xs-12 text-center" style=" margin-bottom: 2em;">#}
+{#                <h1>创业贷款类型</h1>#}
+{#                <p>恒心提供以下贷款政策解读答疑，并提供普通创业贷款代申请服务</p>#}
+{#            </div>#}
+{##}
+{#            <div class="row" style=" margin-top: 4em;">#}
+{#                <div class="col-xs-3 animate-box fadeInUp animated ">#}
+{#                    <div class="hexoco-project-item">#}
+{#                        <img src="/static/images/web/loan-1.png" alt="四川恒心前途教育咨询-科技创业贷款咨询" class="img-responsive">#}
+{#                        <div class="hexoco-text">#}
+{#                            <h2>科技创业贷款</h2>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-xs-3 animate-box fadeInUp animated">#}
+{#                    <div class="hexoco-project-item">#}
+{#                        <img src="/static/images/web/loan-2.png" alt="四川恒心前途教育咨询-自主创业贷款咨询" class="img-responsive">#}
+{#                        <div class="hexoco-text">#}
+{#                            <h2>自主创业贷款</h2>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-xs-3 animate-box fadeInUp animated">#}
+{#                    <div class="hexoco-project-item">#}
+{#                        <img src="/static/images/web/loan-3.png" alt="四川恒心前途教育咨询-个人创业贷款咨询" class="img-responsive">#}
+{#                        <div class="hexoco-text">#}
+{#                            <h2>个人创业贷款</h2>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-xs-3 animate-box fadeInUp animated">#}
+{#                    <div class="hexoco-project-item">#}
+{#                        <img src="/static/images/web/loan-4.png" alt="四川恒心前途教育咨询-青少年创业贷款" class="img-responsive">#}
+{#                        <div class="hexoco-text">#}
+{#                            <h2>青少年创业贷款</h2>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-xs-3 animate-box fadeInUp animated">#}
+{#                    <div class="hexoco-project-item">#}
+{#                        <img src="/static/images/web/loan-5.png" alt="四川恒心前途教育咨询-高校毕业生自主创业贷款" class="img-responsive">#}
+{#                        <div class="hexoco-text">#}
+{#                            <h2>高校毕业生自主创业贷款</h2>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-xs-3 animate-box fadeInUp animated">#}
+{#                    <div class="hexoco-project-item">#}
+{#                        <img src="/static/images/web/loan-6.png" alt="四川恒心前途教育咨询-创业基金贷款" class="img-responsive">#}
+{#                        <div class="hexoco-text">#}
+{#                            <h2>创业基金贷款</h2>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-xs-3 animate-box fadeInUp animated">#}
+{#                    <div class="hexoco-project-item">#}
+{#                        <img src="/static/images/web/loan-7.png" alt="四川恒心前途教育咨询-普通创业贷款" class="img-responsive">#}
+{#                        <div class="hexoco-text">#}
+{#                            <h2>普通创业贷款</h2>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{##}
+{##}
+{#        </div>#}
+{##}
+{#        <div class="row" style="margin-top: 3em;margin-bottom: 3em;">#}
+{#            <div class="col-xs-6 text-center">#}
+{#                <div class="col-xs-12">#}
+{#                    <h1>申请贷款所需条件</h1>#}
+{#                </div>#}
+{#                <div class="col-xs-12 text-left">#}
+{#                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">#}
+{#                            <span class="icon">#}
+{#                                <i class="icon-cloud"></i>#}
+{#                            </span>#}
+{#                        <div class="feature-copy">#}
+{#                            <h4 class="zifont">申请人需具有完全民事行为能力</h4>#}
+{#                        </div>#}
+{#                    </div>#}
+{##}
+{#                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">#}
+{#                            <span class="icon">#}
+{#                                <i class="icon-file-text2"></i>#}
+{#                            </span>#}
+{#                        <div class="feature-copy">#}
+{#                            <h4 class="zifont">无不良信用及债务纪录</h4>#}
+{#                        </div>#}
+{#                    </div>#}
+{##}
+{#                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">#}
+{#                            <span class="icon">#}
+{#                                <i class="icon-credit-card"></i>#}
+{#                            </span>#}
+{#                        <div class="feature-copy">#}
+{#                            <h4 class="zifont">无社保状态或持有失业证</h4>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="col-xs-6 text-center">#}
+{#                <div class="col-xs-12">#}
+{#                    <h1>办理流程</h1>#}
+{#                </div>#}
+{#                <div class="col-xs-12 text-center">#}
+{#                    <div class="col-xs-12 text-center" style="margin-top: 1em;">#}
+{#                        <img src="/static/images/web/liveflow3.png" style="width: 80%;height: auto">#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
 
 {% endblock %}
