--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -143,7 +143,7 @@
                         <div class="ourservice">
                             <i class="icon-home">
                             </i>
-                            <p>学历学位认证</p>
+                            <p>学历学位获取</p>
                         </div>
                     </a>
                 </div>
