--- a/core/templates/web/assistedliving.html
+++ b/core/templates/web/assistedliving.html
@@ -66,13 +66,13 @@
                         <div class="col-xs-9 col-sm-9 text-left">
                             <strong class="nav-text">恒心微管家</strong>
                         </div></a></li>
-                    <li class="col-xs-4"><a href="#loanid">
-                        <div class="col-xs-3 col-sm-3 ">
-                            <i class="icon-coin-yen"></i>
-                        </div>
-                        <div class="col-xs-9 col-sm-9 text-left">
-                            <strong class="nav-text">创业贷款申请指导</strong>
-                        </div></a></li>
+{#                    <li class="col-xs-4"><a href="#loanid">#}
+{#                        <div class="col-xs-3 col-sm-3 ">#}
+{#                            <i class="icon-coin-yen"></i>#}
+{#                        </div>#}
+{#                        <div class="col-xs-9 col-sm-9 text-left">#}
+{#                            <strong class="nav-text">创业贷款申请指导</strong>#}
+{#                        </div></a></li>#}
                 </ul>
             </div>
         </div>
