--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -192,15 +192,15 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-3">
-                    <a href="/assistedliving">
-                        <div class="ourservice">
-                            <i class="icon-earth">
-                            </i>
-                            <p>生活辅助</p>
-                        </div>
-                    </a>
-                </div>
+{#                <div class="col-xs-3">#}
+{#                    <a href="/assistedliving">#}
+{#                        <div class="ourservice">#}
+{#                            <i class="icon-earth">#}
+{#                            </i>#}
+{#                            <p>生活辅助</p>#}
+{#                        </div>#}
+{#                    </a>#}
+{#                </div>#}
                 <div class="col-xs-3">
                     <a href="/immigrant">
                         <div class="ourservice">
