--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -135,7 +135,7 @@
                                 </li>
                                 <li><a href="/courseguide" id="course_guide">学术辅导</a></li>
                                 <li><a href="/zygh" id="career_planning">海归职业规划</a></li>
-                                <li><a href="/assistedliving" id="assistedliving">生活辅助</a></li>
+{#                                <li><a href="/assistedliving" id="assistedliving">生活辅助</a></li>#}
                                 {#                                <li>#}
                                 {#                                    <a href="/loan" id="loan">创业贷款申请</a>#}
                                 {#                                </li>#}
@@ -190,7 +190,7 @@
             <div class="row row-pb-md">
                 <div class="col-md-4">
                     <h3>四川恒心前途教育咨询有限公司</h3>
-                    <p>我们向留学生群体提供从名校直通、课业辅导、学历学位获取到职业规划，创业贷款申请指导、生活辅助的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
+                    <p>我们向留学生群体提供从名校直通、课业辅导、学历学位获取到职业规划的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
                     <p>We are unique, 我们只是比别人多了一点恒心</p>
                     <p>You are fortunate, 你只是别别人多了恒心</p>
                     <p><i class="icon-location"></i>地址：四川省成都市高新区天府大道中段666号希顿国际广场C座1203室</p>
