--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -28,7 +28,7 @@
             <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                 <h3>四川恒心前途教育咨询有限公司</h3>
                 <p>四川恒心前途教育咨询有限公司，是成立于2016年的留学群体一站式服务机构。</p>
-                <p>我们向留学生群体提供从名校直通、课业辅导、学历学位认证到职业规划，创业贷款申请指导、生活辅助的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
+                <p>我们向留学生群体提供从名校直通、课业辅导、学历学位认证到职业规划的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
 {#                <p>We are unique, 我们只是比别人多了一点恒心</p>#}
 {#                <p>You are fortunate, 你只是比别人多了一点恒心</p>#}
             </div>
@@ -120,25 +120,25 @@
                 <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 5em;">
                     <h4>加入我们</h4>
                 </div>
-                <div class="col-xs-8 col-xs-offset-2 text-center animate-box fadeInUp animated">
-                    <h1>招商与合作</h1>
-                    <p>不论你是有我们尚缺的同类型业务，还是想要完善自己的版图，只要你有意愿帮助到更多的留学群体，都欢迎你联系我们，洽谈合作。</p>
-                </div>
-
-                <div class="text-center col-xs-12" style="margin-top: 2em;">
-                    <div class="col-xs-12 text-center" style="margin-bottom: 1em;margin-top: -1em;" >
-                        <h1 style="font-size: 30px;color: #59bcdb;">如果你是</h1>
-                    </div>
-                    <div class ="col-xs-12">
-                        <img src="/static/images/web/about/b2.png" alt="hexelite-招商合作" style="width: 80%">
-                    </div>
-                    <div class="col-xs-12 text-center" style="margin-bottom: 1em;margin-top: 2em;" >
-                        <h1 style="font-size: 30px;color: #59bcdb;">我们能为你</h1>
-                    </div>
-                    <div class ="col-xs-12">
-                        <img src="/static/images/web/about/b1.png" alt="hexelite-招商合作" style="width: 60%">
-                    </div>
-                </div>
+{#                <div class="col-xs-8 col-xs-offset-2 text-center animate-box fadeInUp animated">#}
+{#                    <h1>招商与合作</h1>#}
+{#                    <p>不论你是有我们尚缺的同类型业务，还是想要完善自己的版图，只要你有意愿帮助到更多的留学群体，都欢迎你联系我们，洽谈合作。</p>#}
+{#                </div>#}
+{##}
+{#                <div class="text-center col-xs-12" style="margin-top: 2em;">#}
+{#                    <div class="col-xs-12 text-center" style="margin-bottom: 1em;margin-top: -1em;" >#}
+{#                        <h1 style="font-size: 30px;color: #59bcdb;">如果你是</h1>#}
+{#                    </div>#}
+{#                    <div class ="col-xs-12">#}
+{#                        <img src="/static/images/web/about/b2.png" alt="hexelite-招商合作" style="width: 80%">#}
+{#                    </div>#}
+{#                    <div class="col-xs-12 text-center" style="margin-bottom: 1em;margin-top: 2em;" >#}
+{#                        <h1 style="font-size: 30px;color: #59bcdb;">我们能为你</h1>#}
+{#                    </div>#}
+{#                    <div class ="col-xs-12">#}
+{#                        <img src="/static/images/web/about/b1.png" alt="hexelite-招商合作" style="width: 60%">#}
+{#                    </div>#}
+{#                </div>#}
                 <div class="row" style="padding-top: 3em">
                     <div class="row">
                         <div class="col-xs-12 text-center" style="margin-bottom: 3em;margin-top: 3em;" >
