--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -176,7 +176,12 @@
                             <i class="icon-home"></i>
                         </span>
                             <div class="feature-copy">
-                                <h5><a href="/assistedliving#weiguanjia">“恒心微管家”</a>的贴心服务</h5>
+                                <h5>
+{#                                    <a href="/assistedliving#weiguanjia">#}
+                                        “恒心微管家”
+{#                                    </a>#}
+                                    的贴心服务
+                                </h5>
                             </div>
                         </div>
                         <div style="text-align: left"><h1>你只需要做到</h1></div>
