--- a/core/templates/web/zygh.html
+++ b/core/templates/web/zygh.html
@@ -98,7 +98,11 @@
                             <i class="icon-cloud"></i>
                         </span>
                         <div class="feature-copy">
-                            <p class="zifont" style="margin-top: 10px;">为想要归国就业的留学生提供职业测评、简历包装、就业与面试指导、岗位推荐等就业初期准备工作</p>
+                            <p class="zifont" style="margin-top: 10px;">
+{#                                为想要归国就业的留学生#}
+                                提供职业测评、简历包装、就业与面试指导
+{#                                、岗位推荐#}
+                                等就业初期准备工作</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +112,11 @@
             <div class="row" style="margin-top:3em;">
                 <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                     <h4>就业培训</h4>
-                    <p>海外就业培训是执行美国职业移民(EB-3)计划重要的一环，恒心将为有海外就业或职业移民意向的个人进行评测分流，并根据个人的技能匹配美国相应学校进行短期语言技能与职业技能培训，培训结束后，个人即可凭个人意愿在当地就业，并办理落户，展开美国生活。</p>
+                    <p>海外就业培训是执行美国职业移民(EB-3)计划重要的一环
+{#                        ，#}
+{#                        恒心将为有海外就业或职业移民意向的个人进行评测分流，#}
+{#                        并根据个人的技能匹配美国相应学校进行短期语言技能与职业技能培训，培训结束后，个人即可凭个人意愿在当地就业，并办理落户，展开美国生活。#}
+                    </p>
                 </div>
             </div>
             <div class="row" style="margin-top:3em;">
