--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -194,7 +194,7 @@
                     <h3>四川恒心前途教育咨询有限公司</h3>
                     <p>我们向留学生群体提供从名校直通、课业辅导、学历学位获取到职业规划的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
                     <p>We are unique, 我们只是比别人多了一点恒心</p>
-                    <p>You are fortunate, 你只是别别人多了恒心</p>
+                    <p>You are fortunate, 你只是比别人多了恒心</p>
                     <p><i class="icon-location"></i>地址：四川省成都市高新区天府大道中段666号希顿国际广场C座1203室</p>
                     <p>All rights reserved Copyright © 四川恒心前途教育咨询有限公司</p>
                     <p>蜀ICP备17014004号</p>
