--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -137,7 +137,7 @@
                                 </li>
                                 <li><a href="/courseguide" id="course_guide">学术辅导</a></li>
                                 <li><a href="/zygh" id="career_planning">海归职业规划</a></li>
-{#                                <li><a href="/assistedliving" id="assistedliving">生活辅助</a></li>#}
+                                <li><a href="/assistedliving" id="assistedliving">生活辅助</a></li>
                                 {#                                <li>#}
                                 {#                                    <a href="/loan" id="loan">创业贷款申请</a>#}
                                 {#                                </li>#}
@@ -290,6 +290,8 @@
     })(window, document, 'script', '_MEIQIA');
     _MEIQIA('entId', 53222);
 </script>
+
+<script type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F055736c7bb2b343ae9f0b2693c64c046' type='text/javascript'%3E%3C/script%3E")) </script>
 </body>
 </html>
 
